fix: added a new line of code 'height: 100dvh' to run correctly on mobile

--- a/src/cripchat/static/css/style.css
+++ b/src/cripchat/static/css/style.css
@@ -26,6 +26,7 @@ html {
     display: grid;
     width: 100%;
     height: 100vh;
+    height: 100dvh;
     grid-template-columns: 1fr 2fr;
     grid-template-rows: 50px 1fr 100px;
     grid-template-areas: /* define the design of our layout*/
